# unn-python-2022

./: setup.cfg
homeworks/DDYunin/3/: hw3_contract.py
practice/DDYunin/10/: pyproject.toml
practice/DDYunin/10/practice_10/: __main__.py  server.py
practice/DDYunin/3/: agry_comments.py  camel.py  task_valid_walk.py
practice/DDYunin/4/: pyproject.toml
practice/DDYunin/4/1/: hm1_game.py
practice/DDYunin/4/2/: hw2.py
practice/DDYunin/4/3/: contract.py
practice/DDYunin/4/4/todo/: commands.py
practice/DDYunin/5/: pyproject.toml
practice/DDYunin/5/habrhabr/: name_posts.json  scrapy.cfg
practice/DDYunin/5/habrhabr/habrhabr/: items.py  middlewares.py  pipelines.py  settings.py
practice/DDYunin/5/habrhabr/habrhabr/spiders/: habr_articles_spider.py
practice/DDYunin/6/: pyproject.toml
practice/DDYunin/6/practice_6/: __main__.py  cls_validate_types.py
practice/DDYunin/7/: pyproject.toml
practice/DDYunin/7/practice_7/: __main__.py  task_2.py
practice/DDYunin/8/: pyproject.toml
practice/DDYunin/8/practice_8/: __main__.py
