[tool.poetry]
name = "practice"
version = "0.1.0"
description = "This task for practice"
authors = ["Dan Yunin <DaniilUnin2002@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
