[tool.poetry]
name = "7"
version = "0.1.0"
description = ""
authors = ["Dan Yunin <DaniilUnin2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "practice_7"}]

[tool.poetry.dependencies]
python = "^3.10"
memory-profiler = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
